k8s/service_account.yml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
