k8s/bankapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-dep
  namespace: newbankapp
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: bankapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
        - name: bankapp-container
          image: rohit5126/bankapp:72c50fd
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "256m"
            limits:
              memory: "512Mi"
              cpu: "512m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 100
            runAsGroup: 101
            allowPrivilegeEscalation: false
