k8s/bankapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-svc
  namespace: newbankapp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: bankapp
  ports:
  - port: 80
    targetPort: 8080
