k8s/mysql-stata.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: newbankapp
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  clusterIP: None
  selector:  
    app: mysql-app
  ports:
    - port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-state
  namespace: newbankapp
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels: 
    app: mysql-app
spec:
  selector:
    matchLabels:
      app: mysql-app
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
        - name: mysql-state
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: web
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command: ["sh","-c", "mysqladmin ping -h localhost -u root -p$MYSQL_PASSWORD"]
            initialDelaySeconds: 30
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        storageClassName: gp2
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
