k8s/nlb-service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-internal-lb
  namespace: newbankapp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: LoadBalancer
  selector:
    app: mysql-app
  ports:
    - port: 3306
      targetPort: 3306
