k8s/ollam.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: newbankapp
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: ollama
  ports:
  - port: 11434
    targetPort: 11434

---


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama-deployment
  namespace: newbankapp
spec:
  selector:
    matchLabels:
      app: ollama
  serviceName: ollama
  replicas: 1
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama-app
        image: ollama/ollama
        command:
          - /bin/bash
          - -c
          - |
            echo "renaming file from .so to .bak"
            if [ -f /usr/lib/ollama/libggml-cpu-sapphirerapids.so ]; then
              mv /usr/lib/ollama/libggml-cpu-sapphirerapids.so /usr/lib/ollama/libggml-cpu-sapphirerapids.so.bak
            fi

            echo "Starting Ollama server in background..."
            /bin/ollama serve &
            SERVER_PID=$!

            echo "Waiting for Ollama server to become available..."
            while ! (: </dev/tcp/127.0.0.1/11434) 2>/dev/null; do
              sleep 1
            done

            echo "Pulling tinyllama model..."
            /bin/ollama pull tinyllama

            echo "Ollama is ready!"
            wait $SERVER_PID
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        ports:
          - containerPort: 11434
        volumeMounts:
          - name: ollama-data
            mountPath: "/root/.ollama"
        readinessProbe:
            exec:
              command: ["sh","-c", "ollama list"]
            initialDelaySeconds: 30
            periodSeconds: 50
            timeoutSeconds: 50
  volumeClaimTemplates:
    - metadata: 
        name: ollama-data
      spec:
        storageClassName: gp2
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
