k8s/ollama_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: newbankapp
spec:
  selector:
    app: ollama
  ports:
  - port: 11434
    targetPort: 11434
